--- a/script/heroku_setup.sh.example
+++ b/script/heroku_setup.sh.example
@@ -1,3 +1,4 @@
+heroku labs:enable log-runtime-metrics
 heroku config:set FOG_PROVIDER=AWS
 heroku config:set AWS_ACCESS_KEY_ID=
 heroku config:set AWS_SECRET_ACCESS_KEY=
